ultimas consultas a la base de datos y la creacion del index (idx_books_stars) para pruebas de tiempo

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2324,6 +2324,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66528a01",
+   "metadata": {},
+   "source": [
+    "------ MOSTRAR TODOS LOS LIBROS CON SUS ESTRELLAS Y SUS AUTORES ------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ffb24c97",
@@ -2483,6 +2491,410 @@
     "conexion.close()\n",
     "\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6eb2d0",
+   "metadata": {},
+   "source": [
+    " ----- MOSTRAR TODOS LOS LIBROS QUE TENGAN TRES ESTRELLAS O MENOS ------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1c67bd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>price</th>\n",
+       "      <th>stars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Great Railway Bazaar</td>\n",
+       "      <td>30.54</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Road to Little Dribbling: Adventures of an...</td>\n",
+       "      <td>23.21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>In a Dark, Dark Wood</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A Murder in Time</td>\n",
+       "      <td>16.64</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>That Darkness (Gardiner and Renner #1)</td>\n",
+       "      <td>13.92</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>The Bone Hunters (Lexy Vaughan &amp; Steven Macaul...</td>\n",
+       "      <td>59.71</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>621</th>\n",
+       "      <td>Overload: How to Unplug, Unwind, and Unleash Y...</td>\n",
+       "      <td>52.15</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
+       "      <td>12.08</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>623</th>\n",
+       "      <td>Silence in the Dark (Logan Point #4)</td>\n",
+       "      <td>58.33</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>624</th>\n",
+       "      <td>The Bulletproof Diet: Lose up to a Pound a Day...</td>\n",
+       "      <td>49.05</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>625 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title  price stars\n",
+       "0                             The Great Railway Bazaar  30.54     1\n",
+       "1    The Road to Little Dribbling: Adventures of an...  23.21     1\n",
+       "2                                 In a Dark, Dark Wood  19.63     1\n",
+       "3                                     A Murder in Time  16.64     1\n",
+       "4               That Darkness (Gardiner and Renner #1)  13.92     1\n",
+       "..                                                 ...    ...   ...\n",
+       "620  The Bone Hunters (Lexy Vaughan & Steven Macaul...  59.71     3\n",
+       "621  Overload: How to Unplug, Unwind, and Unleash Y...  52.15     3\n",
+       "622  You Are a Badass: How to Stop Doubting Your Gr...  12.08     3\n",
+       "623               Silence in the Dark (Logan Point #4)  58.33     3\n",
+       "624  The Bulletproof Diet: Lose up to a Pound a Day...  49.05     3\n",
+       "\n",
+       "[625 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        Books.title,\n",
+    "        Books.price,\n",
+    "        Books.stars\n",
+    "    FROM Books \n",
+    "    WHERE Books.stars <= 3\n",
+    "    ORDER BY stars;\n",
+    "\"\"\"\n",
+    "\n",
+    "pf = pd.read_sql_query(query, conexion)\n",
+    "\n",
+    "conexion.close()\n",
+    "\n",
+    "display(pf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74e97f1",
+   "metadata": {},
+   "source": [
+    "-------- MOSTRAR LOS LIBROS QUE SON MAS ECONOMICOS ------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d8e1eda0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>Authors</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A Clash of Kings (A Song of Ice and Fire #2)</td>\n",
+       "      <td>3</td>\n",
+       "      <td>George R. R. Martin</td>\n",
+       "      <td>10.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adulthood Is a Myth: A \"Sarah's Scribbles\" Col...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sarah Andersen</td>\n",
+       "      <td>10.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Agnostic: A Spirited Manifesto</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lesley Hazleton</td>\n",
+       "      <td>12.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>An Abundance of Katherines</td>\n",
+       "      <td>5</td>\n",
+       "      <td>John Green</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Are We There Yet?</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dan Albert</td>\n",
+       "      <td>10.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>The Third Wave: An Entrepreneur’s Vision of th...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Steve Case</td>\n",
+       "      <td>12.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>The Tipping Point: How Little Things Can Make ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>none</td>\n",
+       "      <td>10.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Underlying Notes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Eva Pasco</td>\n",
+       "      <td>11.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>Walt Disney's Alice in Wonderland</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Teddy Slater</td>\n",
+       "      <td>12.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Jen Sincero</td>\n",
+       "      <td>12.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title stars  \\\n",
+       "0        A Clash of Kings (A Song of Ice and Fire #2)     3   \n",
+       "1   Adulthood Is a Myth: A \"Sarah's Scribbles\" Col...     2   \n",
+       "2                      Agnostic: A Spirited Manifesto     5   \n",
+       "3                          An Abundance of Katherines     5   \n",
+       "4                                   Are We There Yet?     3   \n",
+       "..                                                ...   ...   \n",
+       "58  The Third Wave: An Entrepreneur’s Vision of th...     5   \n",
+       "59  The Tipping Point: How Little Things Can Make ...     2   \n",
+       "60                                   Underlying Notes     2   \n",
+       "61                  Walt Disney's Alice in Wonderland     5   \n",
+       "62  You Are a Badass: How to Stop Doubting Your Gr...     3   \n",
+       "\n",
+       "                Authors  price  \n",
+       "0   George R. R. Martin  10.79  \n",
+       "1        Sarah Andersen  10.90  \n",
+       "2       Lesley Hazleton  12.51  \n",
+       "3            John Green  10.00  \n",
+       "4            Dan Albert  10.66  \n",
+       "..                  ...    ...  \n",
+       "58           Steve Case  12.61  \n",
+       "59                 none  10.02  \n",
+       "60            Eva Pasco  11.82  \n",
+       "61         Teddy Slater  12.96  \n",
+       "62          Jen Sincero  12.08  \n",
+       "\n",
+       "[63 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        Books.title,\n",
+    "        Books.stars,\n",
+    "        GROUP_CONCAT(Authors.name, \", \") AS Authors,\n",
+    "        Books.price\n",
+    "    FROM Books\n",
+    "    INNER JOIN Books_authors ON \n",
+    "        Books.id = Books_authors.id_book\n",
+    "    INNER JOIN Authors ON\n",
+    "        Books_authors.id_author = Authors.id\n",
+    "    WHERE Books.price < 13.0\n",
+    "    GROUP BY Books.title;\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, conexion)\n",
+    "\n",
+    "conexion.close()\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdde4918",
+   "metadata": {},
+   "source": [
+    "------ PRUEBA DE TIEMPO CON O SIN INDEX ------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "55b0fe4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sin indice:  -0.0033087730407714844\n",
+      "con indice:  -0.003207683563232422\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "cursor = conexion.cursor()\n",
+    "\n",
+    "start = time.time()\n",
+    "cursor.execute(\"\"\"\n",
+    "    SELECT\n",
+    "        Books.title,\n",
+    "        Books.stars\n",
+    "    FROM Books\n",
+    "    ORDER BY Books.stars;\n",
+    "\"\"\") \n",
+    "cursor.fetchall()\n",
+    "print(\"sin indice: \", (start - time.time()))\n",
+    "\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "    CREATE INDEX IF NOT EXISTS idx_books_stars ON Books(stars);\n",
+    "\"\"\")\n",
+    "conexion.commit()\n",
+    "\n",
+    "start = time.time()\n",
+    "cursor.execute(\"\"\"\n",
+    "    SELECT\n",
+    "        Books.title,\n",
+    "        Books.stars\n",
+    "    FROM Books\n",
+    "    ORDER BY Books.stars;\n",
+    "\"\"\") \n",
+    "cursor.fetchall()\n",
+    "print(\"con indice: \", (start - time.time()))\n",
+    "\n",
+    "conexion.close()\n"
    ]
   }
  ],
