modificacion en codigo de prueba de tiempo con o sin index para asegurar una correcta ejecucion

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -3000,8 +3000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sin indice:  -0.0033087730407714844\n",
-      "con indice:  -0.003207683563232422\n"
+      "sin indice:  0.0027217864990234375\n",
+      "con indice:  0.0010311603546142578\n"
      ]
     }
    ],
@@ -3012,6 +3012,10 @@
     "conexion = sqlite3.connect(\"dataBase.db\")\n",
     "cursor = conexion.cursor()\n",
     "\n",
+    "cursor.execute(\"\"\"\n",
+    "    DROP INDEX idx_books_stars;\n",
+    "\"\"\")\n",
+    "\n",
     "start = time.time()\n",
     "cursor.execute(\"\"\"\n",
     "    SELECT\n",
@@ -3021,7 +3025,7 @@
     "    ORDER BY Books.stars;\n",
     "\"\"\") \n",
     "cursor.fetchall()\n",
-    "print(\"sin indice: \", (start - time.time()))\n",
+    "print(\"tiempo sin indice: \", (time.time() - start))\n",
     "\n",
     "\n",
     "cursor.execute(\"\"\"\n",
@@ -3038,7 +3042,7 @@
     "    ORDER BY Books.stars;\n",
     "\"\"\") \n",
     "cursor.fetchall()\n",
-    "print(\"con indice: \", (start - time.time()))\n",
+    "print(\"tiempo con indice: \", (time.time() - start))\n",
     "\n",
     "conexion.close()\n"
    ]
