pruebas de consultas a la base de datos con subconsultas dentro

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2992,7 +2992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "55b0fe4f",
    "metadata": {},
    "outputs": [
@@ -3000,8 +3000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sin indice:  0.0027217864990234375\n",
-      "con indice:  0.0010311603546142578\n"
+      "tiempo sin indice:  0.0025064945220947266\n",
+      "tiempo con indice:  0.0011780261993408203\n"
      ]
     }
    ],
@@ -3045,6 +3045,346 @@
     "print(\"tiempo con indice: \", (time.time() - start))\n",
     "\n",
     "conexion.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1daccf28",
+   "metadata": {},
+   "source": [
+    "----- SUB CONSULTAS ------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3d436c9",
+   "metadata": {},
+   "source": [
+    "------ SELECCIONAR LOS LIBROS QUE TIENEN IGUAL O MAYOR NUMERO DE ESTRELLAS QUE EL PRIMEDIO ------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "4e09407c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#GIRLBOSS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10% Happier: How I Tamed the Voice in My Head,...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13 Hours: The Inside Account of What Really Ha...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1st to Die (Women's Murder Club #1)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23 Degrees South: A Tropical Tale of Changing ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>Without Borders (Wanderlove #1)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>World War Z: An Oral History of the Zombie War</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419</th>\n",
+       "      <td>You can't bury them all: Poems</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>Zero History (Blue Ant #3)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>orange: The Complete Collection 1 (orange: The...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>48.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>422 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title stars  price\n",
+       "0                                            #GIRLBOSS     1  50.96\n",
+       "1    10% Happier: How I Tamed the Voice in My Head,...     2  24.57\n",
+       "2    13 Hours: The Inside Account of What Really Ha...     1  27.06\n",
+       "3                  1st to Die (Women's Murder Club #1)     1  53.98\n",
+       "4    23 Degrees South: A Tropical Tale of Changing ...     2  35.79\n",
+       "..                                                 ...   ...    ...\n",
+       "417                    Without Borders (Wanderlove #1)     2  45.07\n",
+       "418     World War Z: An Oral History of the Zombie War     1  21.80\n",
+       "419                     You can't bury them all: Poems     2  33.63\n",
+       "420                         Zero History (Blue Ant #3)     1  34.77\n",
+       "421  orange: The Complete Collection 1 (orange: The...     1  48.41\n",
+       "\n",
+       "[422 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        title,\n",
+    "        stars,\n",
+    "        price\n",
+    "    FROM Books\n",
+    "    WHERE\n",
+    "        stars <= (\n",
+    "            SELECT \n",
+    "                AVG(stars) as stars\n",
+    "            FROM Books)\n",
+    "    GROUP BY title;\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, conexion)\n",
+    "\n",
+    "conexion.close()\n",
+    "\n",
+    "display(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "368dc28f",
+   "metadata": {},
+   "source": [
+    "------- SELECCIONAR LIBROS QUE TENGAS MAS AUTORES QUE EL PROMEDIO ------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "61b8aded",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>number_authors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Cuckoo's Calling (Cormoran Strike #1)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Guernsey Literary and Potato Peel Pie Society</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rat Queens, Vol. 3: Demons (Rat Queens (Collec...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Outcast, Vol. 1: A Darkness Surrounds Him (Out...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lumberjanes, Vol. 2: Friendship to the Max (Lu...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Rework</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Chasing Heaven: What Dying Taught Me About Living</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>The Grownup</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>The Art and Science of Low Carbohydrate Living</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Equal Is Unfair: America's Misguided Fight Aga...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title stars  number_authors\n",
+       "0           The Cuckoo's Calling (Cormoran Strike #1)     1               2\n",
+       "1   The Guernsey Literary and Potato Peel Pie Society     1               2\n",
+       "2   Rat Queens, Vol. 3: Demons (Rat Queens (Collec...     3               2\n",
+       "3   Outcast, Vol. 1: A Darkness Surrounds Him (Out...     4               2\n",
+       "4   Lumberjanes, Vol. 2: Friendship to the Max (Lu...     2               3\n",
+       "..                                                ...   ...             ...\n",
+       "66                                             Rework     2               2\n",
+       "67  Chasing Heaven: What Dying Taught Me About Living     2               2\n",
+       "68                                        The Grownup     1               2\n",
+       "69     The Art and Science of Low Carbohydrate Living     5               4\n",
+       "70  Equal Is Unfair: America's Misguided Fight Aga...     1               2\n",
+       "\n",
+       "[71 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        Books.title,\n",
+    "        Books.stars,\n",
+    "        COUNT(Authors.id) as number_authors\n",
+    "    FROM Books\n",
+    "    JOIN Books_authors ON\n",
+    "        Books.id = Books_authors.id_book\n",
+    "    JOIN Authors ON\n",
+    "        Books_authors.id_author = Authors.id\n",
+    "    GROUP BY Books.id\n",
+    "    HAVING COUNT(Authors.id) > (\n",
+    "        SELECT \n",
+    "            AVG(total_autores)\n",
+    "        FROM (\n",
+    "            SELECT\n",
+    "                COUNT(Authors.id) AS total_autores\n",
+    "            FROM Books\n",
+    "            JOIN Books_authors ON\n",
+    "                Books.id = Books_authors.id_book\n",
+    "            JOIN Authors ON\n",
+    "                Books_authors.id_author = Authors.id\n",
+    "            GROUP BY Books.id\n",
+    "            )\n",
+    "        );\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, conexion)\n",
+    "\n",
+    "conexion.close()\n",
+    "display(df)"
    ]
   }
  ],
